// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Registration action creators createIdentity should attempt to create an identity 1`] = `
Array [
  Object {
    "type": "SET_LOADING_MSG",
    "value": "Fueling with ether",
  },
  Object {
    "type": "SET_LOADING_MSG",
    "value": "Registering decentralized identity",
  },
  Object {
    "type": "DID_SET",
    "value": "did:jolo:mockdid",
  },
  Object {
    "type": "SET_LOADING_MSG",
    "value": "Preparing launch",
  },
  Object {
    "actions": Array [
      Object {
        "params": Object {
          "mnemonic": "exhibit history avoid kit gaze pulse yellow portion hold lottery panda figure",
        },
        "routeName": "SeedPhrase",
        "type": "Navigation/NAVIGATE",
      },
    ],
    "index": 0,
    "key": undefined,
    "type": "Navigation/RESET",
  },
]
`;

exports[`Registration action creators createIdentity should attempt to create an identity 2`] = `
Array [
  Array [
    Object {
      "data": "4f8d84403d760b5b3fc5426c90827dab",
      "pass": "secret",
    },
  ],
  Array [
    Object {
      "data": "Ky3KXReecYBMU9Z3DtT4eqSTNnmvLU2ZhNdhA73HLzJ5Vyem1Xw7",
      "pass": "secret",
    },
  ],
  Array [
    Object {
      "data": "Kx91VxnTCKqtsQjJLv4TB6YDCnwaiKYwsgEXqk6TzTjijzyx5xEY",
      "pass": "secret",
    },
  ],
]
`;

exports[`Registration action creators createIdentity should attempt to create an identity 3`] = `
Array [
  Array [
    Object {
      "controllingKey": Object {
        "encryptedWif": "U2FsdGVkX19kQYx6vN6GahoZ9mbabreviated+=",
        "entropySource": Object {
          "encryptedEntropy": "U2FsdGVkX19kQYx6vN6GahoZ9mbabreviated+=",
          "timestamp": 946681200000,
        },
        "keyType": "ECDSA secp256k1",
        "path": "m/73'/0'/0'/0",
      },
      "did": "did:jolo:mockdid",
    },
  ],
]
`;

exports[`Registration action creators createIdentity should attempt to create an identity 4`] = `
Array [
  Array [
    Object {
      "encryptedWif": "U2FsdGVkX19kQYx6vN6GahoZ9mbabreviated+=",
      "entropySource": Object {
        "encryptedEntropy": "U2FsdGVkX19kQYx6vN6GahoZ9mbabreviated+=",
        "timestamp": 946681200000,
      },
      "keyType": "ECDSA secp256k1",
      "path": "m/44'/60'/0'/0/0",
    },
  ],
]
`;

exports[`Registration action creators createIdentity should attempt to create an identity 5`] = `
Array [
  Array [
    Object {
      "data": Array [
        54,
        84,
        85,
        238,
        93,
        32,
        99,
        114,
        226,
        221,
        36,
        123,
        122,
        227,
        246,
        199,
        45,
        77,
        141,
        115,
        59,
        162,
        196,
        243,
        225,
        231,
        162,
        184,
        203,
        168,
        66,
        180,
      ],
      "type": "Buffer",
    },
  ],
]
`;

exports[`Registration action creators createIdentity should attempt to create an identity 6`] = `
Array [
  Array [
    "0x000test",
  ],
]
`;

exports[`Registration action creators savePassword should attempt to save the password in the keychain 1`] = `
Array [
  Object {
    "actions": Array [
      Object {
        "routeName": "Entropy",
        "type": "Navigation/NAVIGATE",
      },
    ],
    "index": 0,
    "key": undefined,
    "type": "Navigation/RESET",
  },
]
`;

exports[`Registration action creators startRegistration should initiate the registration process 1`] = `
Array [
  Object {
    "actions": Array [
      Object {
        "routeName": "PasswordEntry",
        "type": "Navigation/NAVIGATE",
      },
    ],
    "index": 0,
    "key": undefined,
    "type": "Navigation/RESET",
  },
]
`;

exports[`Registration action creators submitEntropy should correctly navigate to route and provide the entropy 1`] = `
Array [
  Object {
    "actions": Array [
      Object {
        "routeName": "Loading",
        "type": "Navigation/NAVIGATE",
      },
    ],
    "index": 0,
    "key": undefined,
    "type": "Navigation/RESET",
  },
  Object {
    "type": "SET_LOADING_MSG",
    "value": "Encrypting and storing data locally",
  },
]
`;
